# nix1809-hslua-bug

./: README.md  broken.cabal  broken.nix  default.nix
nix/: haddock-library.nix  hslua.nix  ipynb.nix  pandoc.nix
src/: Broken.hs
