name:                broken
version:             0.1.0.0
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/themattchan/parametri.city


executable broken
  hs-source-dirs:      src
  main-is:             Broken.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pandoc >= 2.6
                     , pandoc-citeproc >= 0.14.3
                     , text
                     , neat-interpolation
                     , pandoc-lens
                     , transformers
                     , containers
                     , lens >= 4.15.0
                     , time
                     , blaze-html
                     , blaze-markup
                     , directory >= 1.3.0.0
                     , filepath >= 1.4.1.1
                     , process
  default-language:    Haskell2010
